经营态势无需加上截止年月份

--- a/html/bi/jyts.html
+++ b/html/bi/jyts.html
@@ -15,8 +15,6 @@
 <script src="../../lib/hori/hori.js?tag=21369"></script>
 <script src="../../lib/jquery-mobile/jquery.mobile.min.js"></script>
 <script src="../../config/web/config.js"></script>
-<script src="../../lib/knockout/knockout.js"></script>
-<script src="../../lib/knockout/knockout.mapping.js"></script>
 <style>
 a {
 	text-decoration: none;
@@ -70,8 +68,6 @@ a {
 					"success" : function(res) {
 						res = res.replace(/\s\s/g, "</p><p>");
 						var jsonObj = JSON.parse(res);
-						render(jsonObj);
-						$("#month").css('display', '');
 						document.getElementById("aa").innerHTML = jsonObj.reportdata.datatext;
 
 					},
@@ -80,10 +76,6 @@ a {
 						$.hori.hideLoading();
 					}
 				});
-	}
-	function render(parsedStr) {
-		viewModel = ko.mapping.fromJS(parsedStr);
-		ko.applyBindings(viewModel, document.getElementById('month'));
 	}
 </script>
 <style>
@@ -95,12 +87,8 @@ p {
 <body>
 
 	<!-- 经营态势 -->
-	<div data-role="content" id="srwc" class="login">
-		<div  id='month' style="float: right; display: none;">
-			注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
-				data-bind="text: reportdata.month"></span>月。
-		</div>
-		<div  align="left" id="aa"
+	<div data-role="page" id="srwc" class="login">
+		<div data-role="content" align="left" id="aa"
 			style="margin-left: 20px; font-size: 20px;"></div>
 	</div>
 </body>
