pad页面右侧div加框

--- a/html/ipad.html
+++ b/html/ipad.html
@@ -138,7 +138,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="overflow: scroll;height:29.5em;position:relative; margin-top:3%; position: fixed ;top: 7%;right:5px;">
+		<div class="" id="rightContent" style="border:1px solid #000;overflow: scroll;height:29.5em;position:relative; margin-top:3%; position: fixed ;top: 7%;right:25px;">
 			
 		</div>
 	</div>
