--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -137,7 +137,7 @@
     	  <td width="25%">李　谠</td>
     	  <td>集团公司总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td>副主任：</td>
     	  <td>刘大山</td>
     	  <td>集团公司党组成员、副总经理</td>
@@ -182,12 +182,12 @@
     	  <td>黄梅艳</td>
     	  <td>风控信息总部总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>欧阳敬芝</td>
     	  <td>党群部副主任（工会副主席）</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>王景林</td>
     	  <td>总务部、物业公司总经理</td>
