图片新闻 处理bug修改

--- a/html/home2.html
+++ b/html/home2.html
@@ -13,8 +13,9 @@
 <script src="../lib/encrypt/encrypt.js"></script>
 <script src="../lib/json/json2.js"></script>
 <script src="../lib/hori/hori.js?tag=21369"></script>
-<script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
-<script src="../lib/knockout/knockout.js"></script>
+<!-- <script src="../lib/jquery-mobile/jquery.mobile.min.js"></script>
+ -->
+ <script src="../lib/knockout/knockout.js"></script>
 <script src="../lib/knockout/knockout.mapping.js"></script>
 <script src="../lib/app/home/app.js"></script>
 <script src="../config/web/config.js"></script>
