ipad 安全生产值班表详情bug修改

--- a/html/aqscList.html
+++ b/html/aqscList.html
@@ -40,10 +40,8 @@
 			var url = $.hori.getconfig().appServerHost
 					+ "view/safety/watchList/Application/Safety/SafetyProBasic.nsf/SearchHolidayDutyForMobile?open";
 			url = url + "&data-random=" + random + "&data-result=text";
-		} catch (e) {
-		}
+		
 		var data = 'key=' + skey;
-
 		$.hori.ajax({
 			"type" : "post",
 			"url" : url,
@@ -63,10 +61,12 @@
 				$.hori.hideLoading();
 			},
 			"error" : function(res) {
-				alert(res);
 				$.hori.hideLoading();
 			}
 		})
+		} catch (e) {
+			alert(e.message);
+		}
 	}
 	
 	//跳转到详情页面
