--- a/html/ipad.html
+++ b/html/ipad.html
@@ -33,6 +33,14 @@ text-indent:0em;
  font-size: 15px;
 }
   
+  @media  all and (min-device-height: 1023px) and (max-device-height: 1025px) {
+  #rightContent {
+	height: 36.5em;
+  }
+  @media  all and (min-device-height: 550px) and (max-device-height: 630px) {
+  #rightContent {
+	height: 29.5em;
+  }
 </style>
 <body class="ui-mobile-viewport ui-overlay-c"
 	style="overflow-y: hidden;">
@@ -138,7 +146,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="display:inline;border:1px solid #000;overflow: scroll;height:29.5em;position:relative; margin-top:3%; position: fixed ;top: 7%;right:25px;">
+		<div class="" id="rightContent" style="display:inline;border:1px solid #000;overflow: scroll;position:relative; margin-top:3%; position: fixed ;top: 7%;right:25px;">
 			
 		</div>
 	</div>
