对BI加上截止月份

--- a/html/bi/srlrqs.html
+++ b/html/bi/srlrqs.html
@@ -13,6 +13,10 @@ a {
 </style>
 </head>
 <body>
+	<div id='month' style="float: right; display: none;">
+		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+			data-bind="text: reportdata.month"></span>月。
+	</div>
 	<!-- 收入利润趋势 -->
 	<div id="main" style="height: 400px">
 	</div>
