--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -14,6 +14,10 @@ a {
 
 </head>
 <body>
+<div id='month' style="float: right; display: none;">
+		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
+			data-bind="text: reportdata.month"></span>月。
+	</div>
 	<!-- 利润完成 -->
 	<div id="main"  style="height: 400px">
 	</div>
