去掉登录页的取消按钮

--- a/html/login.html
+++ b/html/login.html
@@ -355,22 +355,18 @@ a {
 				<li data-role="fieldcontain">
 					<div class="ui-grid-a">
 						<div class="ui-block-a">
-							<input type="checkbox" data-theme="f" name="saveusername" id="saveusername" data-mini="true" /> <label
+							<input type="checkbox"  name="saveusername" id="saveusername" data-mini="true" /> <label
 								for="saveusername" data-mini="true" >记住帐号</label>
 						</div>
 						<div class="ui-block-b">
-							<a data-role="button" data-theme="f" data-mini="true" onclick="forgetPwd()">忘记密码</a>
+							<a data-role="button"  data-mini="true" onclick="forgetPwd()">忘记密码</a>
 						</div>
 					</div>
 				</li>
 			</ul>
 			<div style='width: 419px;' class="ui-grid-a">
-				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="login()" data-theme="f" data-role="button" data-icon="check">&nbsp;登&nbsp;录&nbsp;</a>
-				</div>
-				<div class="ui-block-b">
-					<a href="javascript:void(0)" onclick="cancel()" data-theme="f" data-role="button" data-icon="delete"
-						data-iconpos="right">&nbsp;取&nbsp;消&nbsp;</a>
+				<div class="ui-block-a" style="width: 100%;">
+					<a href="javascript:void(0)" onclick="login()" data-theme="f" data-role="button" >&nbsp;登&nbsp;录&nbsp;</a>
 				</div>
 			</div>
 			<div>
