“关于” 模块详情 页面设计

--- a/html/xgbb.html
+++ b/html/xgbb.html
@@ -26,11 +26,16 @@ $(document).ready(function() {
 }
 </style>
 <body>
-<div data-role="content" align="center" style="margin-top:20%;">
+  <div data-role="content" align="center" style="margin-top:20%;">
 		<div class="ui-grid-b divwh">
 		<img class="imgToDo" src="../assets/home/ic_launcher.png" />
-		<br><span >版本号<font color="blue"><apsn id="banben"></span></font></span>
+		<br><span >版本号  <font color="blue"><apsn id="banben"></span></font></span>
 		</div>
 	</div>
+	<div style="position:relative;" >
+	<div style="width:100%; position:fixed; left:20px; bottom:10%;">
+	<p><span>版权所有： 中国通用技术集团</span></p>
+	</div>
+</div>
 </body>
 </html>
