--- a/html/signform.html
+++ b/html/signform.html
@@ -31,6 +31,7 @@
 	var s = "/genertec";
 	$(document).ready(
 			function() {
+				try{
 				$.hori.showLoading();
 				//$.hori.hideLoading();
 				$.hori.setHeaderTitle("表单");
@@ -83,6 +84,9 @@
 						$.hori.hideLoading();
 					}
 				});
+				} catch (e) {
+					alert(e.message);
+				}
 			});
 
 	function renderDetail() {
