--- a/html/listDetailsForAQSC.html
+++ b/html/listDetailsForAQSC.html
@@ -65,7 +65,7 @@
 
 	<div id="notice" data-role="page" data-url="notice" tabindex="0"
 		class="ui-page ui-body-c ui-page-active"
-		style="min-height: 302px; height: 100%;">
+		 style="height:100%;margin:5px;">
 		<div data-role="content" align="center" class="ui-content" role="main">
 			<div data-role="content" class="ui-content" role="main" id='divO'
 				style='font-weight: bold;'>
