--- a/html/login.html
+++ b/html/login.html
@@ -25,7 +25,10 @@ a {
 	var captcha_id = "";
 	$(document).ready(function() {
 		//获取验证码
-		getCaptcha();
+		var isMobileDevice=$.hori.isMobileDevice();
+		if(!isMobileDevice){ //如果浏览器登陆
+			getCaptcha();
+		}
 		if (localStorage.getItem("data-saveusername") == "true") {
 			var username = localStorage.getItem("username");
 			if (username == null) {
@@ -79,7 +82,7 @@ a {
 		$("#captcha_id").val(captcha_id); //设置验证码id
 		$("#captchaImg").attr(
 				"src",
-				$.hori.getconfig().appServerHost
+				$.hori.getconfig().appServerHost2
 						+ "/servlet/captcha?captcha_id=" + captcha_id);
 	}
 	function clearData() {
