--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -23,50 +23,29 @@ a {
 	text-decoration: none;
 }
 
-@media only screen and (min-width: 1242px) and (max-width: 1542px) {
-	#main {
-		height: 600px;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	#month {
-		font-size: 18px;
-		color: green;
-	}
-}
-
-@media only screen and (min-width: 1070px) and (max-width: 1242px) {
-	#main {
-		height: 600px;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	#month {
+/* @media  all and (min-device-width: 1080px) and (max-device-width: 1242px) {
+  #month {
 		font-size: 17px;
 	}
-}
+} 
 
-@media screen and (min-width: 400px) and (max-width: 800px) {
-	#main {
-		height: 400px;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
-	#month {
+@media  all and (min-device-width: 720px) and (max-device-width: 1079px) {
+    #month {
 		font-size: 16px;
 	}
 }
 
-@media screen and (min-width: 310px) and (max-width: 330px) {
-	#main {
-		height: 400px;
-		padding-top: 10px;
-		padding-bottom: 10px;
-	}
+ @media  all and (min-device-width: 339px) and (max-device-width: 719px) {
 	#month {
 		font-size: 15px;
 	}
-}
+} 
+
+@media  screen  and (min-width: 310px) and (max-width: 338px) {
+	#month {
+		font-size: 14px;
+	}
+}  */  
 </style>
 <script type="text/javascript">
 	$(document).ready(function() {
@@ -104,12 +83,9 @@ a {
 				var srwc = seriesdata[1];
 				var b = seriesname[0] + ":" + seriesdata[0]
 						+ reportdata.primaryunit;
-				//document.getElementById("yusuan").innerHTML=b;
 				var c = seriesname[1] + ":" + seriesdata[1]
 						+ reportdata.primaryunit;
-				//document.getElementById("leiji").innerHTML=c;
 				var d = seriesname[2] + ":" + seriesdata[2] + "%";
-				//document.getElementById("bili").innerHTML=d;
 				var ww = (Math.ceil((seriesdata[0]) / 100)) * 100;
 				draw(ww, srwc, 0.6, 0.7, b + "\n" + c + "\n" + d);
 			},
@@ -215,11 +191,9 @@ a {
 			data-bind="text: reportdata.month"></span>月。
 	</div>
 	<!-- 收入完成 -->
-	<div id="main"></div>
-	<div style="float: left; margin-left: 50px;">
-		<div id="yusuan" align="left" style="font-size: 1.3em;"></div>
-		<div id="leiji" align="left" style="font-size: 1.3em;"></div>
-		<div id="bili" align="left" style="font-size: 1.3em;"></div>
+	<div id="main"
+		style="height: 400px; padding-top: 10px; padding-bottom: 10px;">
+
 	</div>
 
 </body>
