--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -137,57 +137,57 @@
     	  <td width="25%">李　谠</td>
     	  <td>集团公司总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td>副主任：</td>
     	  <td>刘大山</td>
     	  <td>集团公司党组成员、副总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>李克全</td>
     	  <td>总经理助理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td>委员：</td>
     	  <td>杨景耀</td>
     	  <td>办公厅主任</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>黄继刚</td>
     	  <td>发展总部副总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>詹　荣</td>
     	  <td>运管总部总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>郑东生</td>
     	  <td>运管总部副总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td> </td>
     	  <td>徐　明</td>
     	  <td>财务总部总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>钱新荣</td>
     	  <td>人事总部副总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>黄梅艳</td>
     	  <td>风控信息总部总经理</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>欧阳敬芝</td>
     	  <td>党群部副主任（工会副主席）</td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td></td>
     	  <td>王景林</td>
     	  <td>总务部、物业公司总经理</td>
@@ -195,7 +195,7 @@
     	  <tr>
     	  <td colspan="3">集团公司安委会联系方式 </td>
     	  </tr>
-    	  <tr>
+    	  <tr style="vertical-align:top;">
     	  <td>电话： </td>
     	  <td>郑东生</td>
     	  <td>010 - 63349976</td>
