更改图片新闻中替换访问路径

--- a/html/bi/srwc.html
+++ b/html/bi/srwc.html
@@ -23,7 +23,7 @@ a {
 	text-decoration: none;
 }
 
-/* @media  all and (min-device-width: 1080px) and (max-device-width: 1242px) {
+@media  all and (min-device-width: 1080px) and (max-device-width: 1242px) {
   #month {
 		font-size: 17px;
 	}
@@ -45,7 +45,7 @@ a {
 	#month {
 		font-size: 14px;
 	}
-}  */  
+}  
 </style>
 <script type="text/javascript">
 	$(document).ready(function() {
