微调利润完成页面位置

--- a/html/bi/lrwc.html
+++ b/html/bi/lrwc.html
@@ -198,14 +198,14 @@ a {
 </script>
 
 </head>
-<body>
+<body style="position:relative;top: -8px;left: -8px; width: 99.9%;">
 	<!-- 利润完成 -->
 	<div id='month' style="float: right; display: none;">
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
 			data-bind="text: reportdata.month"></span>月。
 	</div>
 	<div id="main"
-		style="height: 400px; padding-top: 10px; padding-bottom: 10px;">
+		style="height: 400px; padding-top: 10px; padding-bottom: 10px; ">
 
 	</div>
 
