* 修改电子期刊封面使用http

--- a/html/dzqkList.html
+++ b/html/dzqkList.html
@@ -117,7 +117,7 @@ a {
 				json.list = jsonData;
 				var recordLength = json.list.length;
 				for (var i = 0; i < recordLength; i++) {
-					var coverPath = $.hori.getconfig().appServerHost
+					var coverPath = $.hori.getconfig().appServerHost2
 							+ "view/tpxw/file/" + json.list[i].PERCOVER
 							+ "?data-result=file";
 					json.list[i].cover = coverPath;
