--- a/html/taskList.html
+++ b/html/taskList.html
@@ -168,11 +168,11 @@
 				}
 			}
 			var docunid = $(str).data("unid");
-			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
-			localStorage.setItem("oaDataSource",oaurl);
-			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
-			targetURL=encodeURI(targetURL);
-			$.hori.loadPage(targetURL);
+			var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/contentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
+			//localStorage.setItem("oaDataSource",oaurl);
+			//var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+			//targetURL=encodeURI(targetURL);
+			$.hori.loadPage(oaurl);
 		}
 
 		var y1 = null;//这个设置为全局
@@ -190,11 +190,11 @@
 				}
 			}
 			var docunid = $(str).data("unid");
-			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
-			localStorage.setItem("oaDataSource",oaurl);
-			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/taskDownAppform.html";
-			targetURL=encodeURI(targetURL);
-			$.hori.loadPage(targetURL);
+			var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/downcontentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
+			//localStorage.setItem("oaDataSource",oaurl);
+			//var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/taskDownAppform.html";
+			//targetURL=encodeURI(targetURL);
+			$.hori.loadPage(oaurl);
 		}
 	</script>
 	<style>
