--- a/html/officialDocument.html
+++ b/html/officialDocument.html
@@ -161,7 +161,11 @@
 		var docunid = $(str).data("unid");
 		localStorage.setItem("Issuedocdocunid",docunid);
 		var issuedoc = localStorage.getItem("issuedoc");
-		var oaurl =$.hori.getconfig().appServerHost+"view/oa/issuedocPage/"+issuedoc+"/AppDoingView/"+docunid+"?opendocument&login";
+		if (window.navigator.userAgent.match(/iPad/i) || window.navigator.userAgent.match(/iPhone/i) || window.navigator.userAgent.match(/iPod/i)||window.navigator.userAgent.match(/android/i)){
+			var oaurl =$.hori.getconfig().appServerHost+"view/oa/issuedocPage/"+issuedoc+"/AppDoingView/"+docunid+"?opendocument&login"+'?editdocument&data-application=' + $.hori.getconfig().appKey + "&data-userstore=" + localStorage.getItem("cookie_userstore");
+		}else{
+			var oaurl =$.hori.getconfig().appServerHost+"view/oa/issuedocPage/"+issuedoc+"/AppDoingView/"+docunid+"?opendocument&login";
+		}
 // 		localStorage.setItem("oaDataSource",oaurl);
 // 		var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/issuedocPage.html";
 // 		targetURL=encodeURI(targetURL);
@@ -184,7 +188,11 @@
 		var docunid = $(str).data("unid");
 		localStorage.setItem("Receivedocdocunid",docunid);
 		var receivedoc = localStorage.getItem("receivedoc");
-		var oaurl = $.hori.getconfig().appServerHost+"view/oa/receivedocPage/"+receivedoc+"/AppDoingView/"+docunid+"?opendocument&login";
+		if (window.navigator.userAgent.match(/iPad/i) || window.navigator.userAgent.match(/iPhone/i) || window.navigator.userAgent.match(/iPod/i)||window.navigator.userAgent.match(/android/i)){
+			var oaurl = $.hori.getconfig().appServerHost+"view/oa/receivedocPage/"+receivedoc+"/AppDoingView/"+docunid+"?opendocument&login"+'?editdocument&data-application=' + $.hori.getconfig().appKey + "&data-userstore=" + localStorage.getItem("cookie_userstore");
+		}else{
+			var oaurl = $.hori.getconfig().appServerHost+"view/oa/receivedocPage/"+receivedoc+"/AppDoingView/"+docunid+"?opendocument&login";
+		}
 		//localStorage.setItem("oaDataSource",oaurl);
 		//var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/receivedocPage.html";
 		//targetURL=encodeURI(targetURL);
