附件模式修改

--- a/html/annouceform.html
+++ b/html/annouceform.html
@@ -19,7 +19,16 @@
 	<script src="../config/web/config.js"></script>
 	<script src="../lib/app/annouceform/app.js"></script>
 	<script src="../lib/template/template.js"></script>
-	
+				<style>
+					img{
+					display: block;
+					margin: auto;
+					width:100%;
+					}
+					div.message{
+					text-indent: 34px;
+					}
+				</style>
 </head>
 <body>
 
