--- a/html/appform.html
+++ b/html/appform.html
@@ -8,15 +8,17 @@
 	<link rel="stylesheet" href="../lib/jquery-mobile/jquery.mobile.min.css" /> 
 
 	<link rel="stylesheet" href="../assets/jquery.mobile-sugon.css" /> 
-
 	
-	<script src="../lib/jquery/jquery.min.js"></script>		
+	<script src="../lib/jquery/jquery.min.js"></script>	
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
+	<script src="../lib/knockout/knockout.js"></script>
+	<script src="../lib/knockout/knockout.mapping.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../config/web/config.js"></script>
 	<script src="../lib/app/appform/app.js"></script>
 	<script src="../lib/template/template.js"></script>
+	
 </head>
 <body>
 
