--- a/html/issuedocPage.html
+++ b/html/issuedocPage.html
@@ -15,6 +15,8 @@
 	<script src="../lib/jquery/jquery.min.js"></script>		
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
+	<script src="../lib/knockout/knockout.js"></script>
+	<script src="../lib/knockout/knockout.mapping.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../config/web/config.js"></script>
 	<script src="../lib/app/issuedocPage/app.js"></script>
