--- a/html/taskDownAppform.html
+++ b/html/taskDownAppform.html
@@ -13,6 +13,8 @@
 	<script src="../lib/jquery/jquery.min.js"></script>		
 	<script src="../lib/encrypt/encrypt.js"></script>
 	<script src="../lib/json/json2.js"></script>
+	<script src="../lib/knockout/knockout.js"></script>
+	<script src="../lib/knockout/knockout.mapping.js"></script>
 	<script src="../lib/hori/hori.js?tag=21369"></script>
 	<script src="../config/web/config.js"></script>
 	<script src="../lib/app/appform/appTaskDown.js"></script>
