替换首页图标

--- a/html/home.html
+++ b/html/home.html
@@ -251,31 +251,31 @@ a {
 		<div data-role="content" align="center" class="ui-content" role="main">
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img id="imgToDo" width="68" height="68" src="../assets/home/task.png">
+					<a href="javascript:void(0);" onclick="loadTaskList()" class="ui-link"> <img id="imgToDo" width="80" height="80" src="../assets/home/task.png">
 					</a> <span id="spanTodo" class="bubble-count ui-btn-up-c ui-btn-corner-all" style="position: fixed; top: 15px; left: 359.5px;">0</span> <br>
 					<span style="color: #434343"><strong>待办任务</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0);" onclick="officialDocument()" class="ui-link"> <img width="68" height="68" src="../assets/home/mail.png">
+					<a href="javascript:void(0);" onclick="officialDocument()" class="ui-link"> <img width="80" height="80" src="../assets/home/official.png">
 					</a> <br> <span style="color: #434343"><strong>公文查阅</strong></span>
 				</div>
 				<div class="ui-block-c">
-					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					<a href="javascript:void(0)" onclick="loadAnnouceList()" class="ui-link"> <img width="80" height="80" src="../assets/home/Annouce.png">
 					</a> <br> <span style="color: #434343"><strong>通知公告</strong></span>
 				</div>
 			</div>
 			<br>
 			<div class="ui-grid-b" id="divOne">
 				<div class="ui-block-a">
-					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					<a href="javascript:void(0)" onclick="loadContact()" class="ui-link"> <img width="80" height="80" src="../assets/home/tel.png">
 					</a> <br> <span style="color: #434343"><strong>电话查询</strong></span>
 				</div>
 				<div class="ui-block-b">
-					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="68" height="68" src="../assets/home/tel.png">
+					<a href="javascript:void(0)" onclick="loadConnections()" class="ui-link"> <img width="80" height="80" src="../assets/home/Connection.png">
 					</a> <br> <span style="color: #434343"><strong>Connection</strong></span>
 				</div>
 				<div class="ui-block-c" id="divMail">
-					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="68" height="68" src="../assets/home/mail.png">
+					<a href="javascript:void(0);" onclick="openmail()" class="ui-link"> <img width="80" height="80" src="../assets/home/mail.png">
 					</a> <br> <span style="color: #434343"><strong>个人邮件</strong></span>
 				</div>
 			</div>
