修改安全生产中table中的padding和边框颜色

--- a/html/watchlist.html
+++ b/html/watchlist.html
@@ -128,7 +128,7 @@
     </div>
 
     <div data-role="content" id="listContent" style="text-align: center;">
-    	<table  cellspacing="0.1" align="center" style="width:100%;font-size:18px;background-color: white;border:thin solid blue">    	
+    	<table  cellspacing="0.1" align="center" style="padding: 5px; width:100%;font-size:18px;background-color: white;border:thin solid #E5E5E5">    	
     	  <tr bordercolor="white" >
     	  <td colspan="3" >集团公司安全生产委员会</td>
     	  </tr>
