修改安全生产table中的border颜色

--- a/html/aqscLeftPage.html
+++ b/html/aqscLeftPage.html
@@ -3,8 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-    <div data-role="content" id="listContent" style="text-align: center;">
-    	<table  cellspacing="0.1" align="center" style="width:100%;font-size:18px;">    	
+    <div data-role="content" id="listContent" style="text-align: center;margin:5px;">
+    	<table  cellspacing="0.1" align="center" style="padding: 2px;width:100%;font-size:18px;">    	
     	  <tr bordercolor="white" >
     	  <td colspan="3" >集团公司安全生产委员会</td>
     	  </tr>
