--- a/html/ipad.html
+++ b/html/ipad.html
@@ -138,7 +138,7 @@ text-indent:0em;
 			</div>
 		</div>
 		<div class="grid_5" id="middleContent" style="margin-left:1%;"></div>
-		<div class="" id="rightContent" style="display:inline;border:1px solid #000;overflow: scroll;position:relative; margin-top:3%; position: fixed ;top: 7%;right:1.5em;">
+		<div class="" id="rightContent" style="display:inline;overflow: scroll;position:relative; margin-top:3%; position: fixed ;top: 7%;right:1.5em;">
 			
 		</div>
 	</div>
