--- a/html/bi/srbk.html
+++ b/html/bi/srbk.html
@@ -43,7 +43,7 @@ a {
 
 </head>
 <body>
-	<div id='month' style="float: right; display: none;">
+	<div id='month' style="float: right; display: none; margin-bottom: 15px;">
 		注：此经营数据截至<span data-bind="text: reportdata.year"></span>年<span
 			data-bind="text: reportdata.month"></span>月。
 	</div>
