--- a/html/login.html
+++ b/html/login.html
@@ -366,7 +366,7 @@ a {
 						border="0">
 						<tr>
 							<td style="min-width: 56px"><strong>验证码:</strong></td>
-							<td><input type="text" name="captcha" id="captcha"
+							<td><input type="tel" name="captcha" id="captcha"
 								maxlength="4" style="width: 80px;" /></td>
 							<!-- <input type="hidden" id="captcha_id" /> -->
 							<td style="text-align: center;">
