--- a/html/taskList.html
+++ b/html/taskList.html
@@ -168,6 +168,7 @@
 				}
 			}
 			var docunid = $(str).data("unid");
+			var dbpath = $(str).data("dbpath");
 			/*if (window.navigator.userAgent.match(/iPad/i) || window.navigator.userAgent.match(/iPhone/i) || window.navigator.userAgent.match(/iPod/i)||window.navigator.userAgent.match(/android/i)){
 				var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/contentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid+'?editdocument&data-application=' + $.hori.getconfig().appKey + "&data-userstore=" + localStorage.getItem("cookie_userstore");
 			}else{
@@ -175,7 +176,12 @@
 			}*/
 			var oaurl = "/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
 			localStorage.setItem("oaDataSource",oaurl);
-			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+			if(dbpath=="application/digiflowinfopublish.nsf"){
+				var targetURL=$.hori.getconfig().serverBaseUrl+"viewhome/html/annouceTaskForm.html";
+			}else{
+				var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/appform.html";
+			}
+			
 			targetURL=encodeURI(targetURL);
 			$.hori.loadPage(targetURL);
 		}
@@ -195,6 +201,8 @@
 				}
 			}
 			var docunid = $(str).data("unid");
+			var dbpath = $(str).data("dbpath");
+			alert(dbpath);
 			var oaurl="/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
 			/*if (window.navigator.userAgent.match(/iPad/i) || window.navigator.userAgent.match(/iPhone/i) || window.navigator.userAgent.match(/iPod/i)||window.navigator.userAgent.match(/android/i)){
 				var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/downcontentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid+'?editdocument&data-application=' + $.hori.getconfig().appKey + "&data-userstore=" + localStorage.getItem("cookie_userstore");
@@ -202,7 +210,11 @@
 				var oaurl =$.hori.getconfig().appServerHost+"view/oamobile/downcontentmobile/Produce/DigiFlowMobile.nsf/showform?openform&login&apptype=msg&appserver="+oaMsgServer+"&appdbpath=DFMessage/dfmsg_"+itcode+".nsf&appdocunid="+docunid;
 			}*/
 			localStorage.setItem("oaDataSource",oaurl);
-			var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/taskDownAppform.html";
+			if(dbpath=="application/digiflowinfopublish.nsf"){
+				var targetURL=$.hori.getconfig().serverBaseUrl+"viewhome/html/annouceTaskDownForm.html";
+			}else{
+				var targetURL= $.hori.getconfig().serverBaseUrl+"viewhome/html/taskDownAppform.html";
+			}
 			targetURL=encodeURI(targetURL);
 			$.hori.loadPage(targetURL);
 		}
